default/objects/success__Poll__c/success__Poll__c.object-meta.xml
<CustomObject>
    <description>Polls can be defined for Inspire Edition Channels to allow the Channel’s audience to vote for the Content Items (Leaderboards) they would like to see displayed. A poll tracks the start and end of the allotted voting period along with its status and the results.</description>
    <label>Poll</label>
    <nameField>
        <label>Poll Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Polls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>