default/objects/success__Poll__c/fields/success__Channel__c.field-meta.xml
<CustomField>
    <fullName>success__Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>success__Channel__c</referenceTo>
    <relationshipLabel>Polls</relationshipLabel>
    <relationshipName>Polls</relationshipName>
    <type>Lookup</type>
</CustomField>