default/objects/success__Poll__c/fields/success__ChoicesJSON__c.field-meta.xml
<CustomField>
    <fullName>success__ChoicesJSON__c</fullName>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>