default/objects/success__Poll__c/fields/success__Finish__c.field-meta.xml
<CustomField>
    <fullName>success__Finish__c</fullName>
    <label>Finish</label>
    <type>DateTime</type>
</CustomField>