default/objects/success__Poll__c/fields/success__HashTag__c.field-meta.xml
<CustomField>
    <fullName>success__HashTag__c</fullName>
    <label>HashTag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>