default/objects/success__Poll__c/fields/success__Results__c.field-meta.xml
<CustomField>
    <fullName>success__Results__c</fullName>
    <label>Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>