default/objects/success__Poll__c/fields/success__Results_Only__c.field-meta.xml
<CustomField>
    <fullName>success__Results_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Poll Votes will be deleted when Poll Results are being declared.</description>
    <label>Results Only</label>
    <type>Checkbox</type>
</CustomField>