default/objects/success__Poll__c/fields/success__Start__c.field-meta.xml
<CustomField>
    <fullName>success__Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>