default/objects/success__Poll__c/fields/success__Text__c.field-meta.xml
<CustomField>
    <fullName>success__Text__c</fullName>
    <label>Text</label>
    <type>TextArea</type>
</CustomField>